--- a/src/Vista/formMenuAdmin.form
+++ b/src/Vista/formMenuAdmin.form
@@ -326,7 +326,12 @@
         <Component class="javax.swing.JComboBox" name="jComboBox1">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="0"/>
+              <StringArray count="4">
+                <StringItem index="0" value="Seleccione tipo de usuario"/>
+                <StringItem index="1" value="activo"/>
+                <StringItem index="2" value="inactivo"/>
+                <StringItem index="3" value="bloqueado"/>
+              </StringArray>
             </Property>
           </Properties>
           <Events>
